# BinTreeSearch

./: BinTree.hpp  CMakeLists.txt  README.md  Tor.cpp  Tor.hpp  main.cpp
ctest/: CMakeLists.txt
ctest/src/: BinTree.hpp
ctest/tst/: CMakeLists.txt  Test1Insert.cpp  Test2Constr.cpp  Test3ConstrDef.cpp  Test4Delete.cpp  Test5Empty.cpp  Tst6Terminate.cpp
